@@ -1,6 +1,8 @@
 PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ?? ??? 2004, PHP 5.0.3
+- Added the %F modifier to *printf to render a non-locale-aware representation
+  of a float with the . as decimal seperator. (Derick)
 - Fixed error handling in mysqli_multi_query. (Georg)
 - Fixed a problem with SPL iterators aggregating the innner iterator. (Marcus)
 - Extended the functionality of is_subclass_of() to accept either a class name
